# cropnew

./: app.py  crop.py  crop1.py
crop (1)/crop/: app.py  crop_database.py  database.py  ml_models.py  pdf_generator.py  pyproject.toml  replit.md
crop (1)/crop/attached_assets/: ICIRSET-357_1765450906412.docx  crop_recommendation_with_project_1765451793030.csv
